# ofd

./: .gitattributes  .gitignore  404.html  LICENSE  README.md  index.html
backend/: main.py  pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  config.py  main.py
backend/app/api/: model.py
backend/app/core/: event.py
backend/app/models/: DecisionTreeClassifier.joblib  LinearSVC.joblib  SGDClassifier.joblib
backend/app/models/base-models/: AdaBoostClassifier.joblib  BaggingClassifier.joblib  DecisionTreeClassifier.joblib  GaussianNB.joblib  GradientBoostingClassifier.joblib  KNeighborsClassifier.joblib  LogisticRegression.joblib  MLPClassifier.joblib  MultinomialNB.joblib  RandomForestClassifier.joblib  SGDClassifier.joblib  SVC.joblib  XGBClassifier.joblib  m1.joblib  m2.joblib  m3.joblib  m5.joblib  m6.joblib  m7.joblib  m8.joblib
backend/app/models/fusion-models/: m1.joblib  m2.joblib  (+5 more)
backend/app/schemas/: __init__.py  baseschema.py  predict_schema.py
backend/app/services/: __init__.py  data_transformer.py  dataclean.py  dataset.py  encoder.py  model.py  model_loader.py  preprocess.py
backend/app/utils/: __init__.py  tools.py
backend/database/: database.db
backend/dataset/processed/: inputs.joblib  misclassified_samples.csv  preprocessor.joblib  target.joblib
backend/dataset/raw/: Fake Postings.csv  origin.csv
backend/notebooks/: base_model.ipynb  correct.csv  data_analysis.ipynb  data_process.ipynb  feature_engineer.ipynb  model.ipynb  model_analysis.ipynb  others.ipynb  zh_correct.csv
backend/static/css/: swagger-ui.css
(+35 files in other folders)
